Ajax form for albums

--- a/app/views/lessons/new.js.erb
+++ b/app/views/lessons/new.js.erb
@@ -1,1 +1,1 @@
-$('.lesson-form').replaceWith($("<%= j(render partial: 'lessons/form') %>"));
+$('form').replaceWith($("<%= j(render partial: 'lessons/form') %>"));
