--- a/app/views/albums/_form.html.slim
+++ b/app/views/albums/_form.html.slim
@@ -1,23 +1,21 @@
-#diff_topic_name
-  | Раздел: #{parent.title}
-  = simple_form_for [parent, @album] do |f|
-    = f.error_notification
-    = base_errors @album
+= simple_form_for [parent, @album], remote: true do |f|
+  = f.error_notification
+  = base_errors @album
 
-    .form-inputs
-      = f.input :title, label: 'Название'
-      = f.simple_fields_for :pictures do |pf|
-        div
-          = image_tag(pf.object, height: 400) if pf.object.file?
-          = pf.hidden_field :file_cache
-      = f.input :files, as: :file, label: false, input_html: { multiple: true }
-    #album_attention
-      |Дорогие посетители!
-      br
-      |Изображения, содержащие мат, пошлость, рекламу или дубликат уже имеющихся фото, будут удалены!!!
-      br
-      |с уважением,
-      br
-      |адиминистрация сайта
-    .form-actions
-      = f.submit 'Создать альбом'
+  .form-inputs
+    = f.input :title, label: 'Название'
+    = f.simple_fields_for :pictures do |pf|
+      div
+        = image_tag(pf.object, height: 400) if pf.object.file?
+        = pf.hidden_field :file_cache
+    = f.input :files, as: :file, label: false, input_html: { multiple: true }
+  #album_attention
+    |Дорогие посетители!
+    br
+    |Изображения, содержащие мат, пошлость, рекламу или дубликат уже имеющихся фото, будут удалены!!!
+    br
+    |с уважением,
+    br
+    |адиминистрация сайта
+  .form-actions
+    = f.submit 'Создать альбом'
