--- a/app/views/shared/_form_images.html.slim
+++ b/app/views/shared/_form_images.html.slim
@@ -3,4 +3,4 @@
     div data = {removable: true}
       = image_tag(pf.object, height: 100) if pf.object.file?
       = pf.hidden_field :file_cache
-      button data = {remove: true} Удалить
+      button type='button' data = {remove: true} Удалить
