--- a/app/views/stories/show.html.slim
+++ b/app/views/stories/show.html.slim
@@ -9,5 +9,4 @@ br
   = image_tag picture, height: 400
   br
 
-= render partial: 'comments/form'
-= render @story.comments
+= render partial: 'comments/list'
