Fix comment form replacement

--- a/app/views/comments/new.js.erb
+++ b/app/views/comments/new.js.erb
@@ -1,1 +1,1 @@
-$('form').replaceWith('<%= j render(partial: 'comments/form') %>');
+$('form.comment').replaceWith('<%= j render(partial: 'comments/form') %>');
