--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,7 +1,7 @@
 - if comment.persisted?
   .comment id="comment-#{comment.id}"
     - if can? :destroy, comment
-      = button_to 'Удалить', comment, method: :delete, remote: true, confirm: 'Удалить комментарий?'
+      = button_to 'Удалить', comment, method: :delete, remote: true, data: { confirm: 'Удалить комментарий?' }
     .comment_name
       | #{l comment.created_at, format: :long} #{comment.author}
     .comment_content
