--- a/app/views/topics/_form.html.slim
+++ b/app/views/topics/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for @topic, remote: true do |f|
+= simple_form_for @topic, remote: true, html: { honeypot: true } do |f|
   = f.error_notification
 
   .form-inputs
