лишнее стерто, все упорядочено в отдельный новый общий файл, вормат кнопок удалить и уроков

--- a/app/views/lessons/index.html.slim
+++ b/app/views/lessons/index.html.slim
@@ -8,7 +8,7 @@ br
 
 div
   - @lessons.each do |lesson|
-    = link_to lesson do
+    = link_to lesson, class: :lesson_set do
       p = lesson.title
       = image_tag lesson.pictures.first, height: 200
 
