Attach pictures for lessons comments

--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -5,4 +5,6 @@
     .comment_name
       | #{l comment.created_at, format: :long} #{comment.author}
     .comment_content
-      = comment.comment
+      p = comment.comment
+      p = link_to comment.picture.file.url do
+        = image_tag(comment.picture, height: 200) if comment.picture
