Adding pictures to albums

--- a/app/views/albums/show.html.slim
+++ b/app/views/albums/show.html.slim
@@ -9,4 +9,6 @@ p
 - @album.pictures.each do |picture|
   div = image_tag picture.file, height: 400
 
+= render partial: 'add_pictures_form'
+
 = render partial: 'comments/list'
