подгонка под браузеры номер один

--- a/app/assets/stylesheets/shared.css.sass
+++ b/app/assets/stylesheets/shared.css.sass
@@ -29,9 +29,14 @@ textarea, input[type=text]
     background-color: #ffffff
     outline:
       color: #fe7501
+      width: 1.5px
+      style: solid
   &:focus
     outline:
       color: #fe7501
+      width: 1.5px
+      style: solid
+
 
 input[type=file]
   font-family: Tahoma, Arial
@@ -74,10 +79,12 @@ input[type=submit]
 
 span.error
   color: darkred
+  font-family: Tahoma, Arial
 
 .field
   clear: both
   text-align: right
+  margin-bottom: 4px
   label
     float: left
 
