--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -7,7 +7,7 @@
     = f.input :comment, label: 'Комментарий:'
     = f.simple_fields_for :picture do |pf|
       = image_tag(pf.object, height: 100) if pf.object.file?
-      = pf.input :file, label: 'Картинка:', as: :file, required: false
+      = pf.input :file, label: 'Фото вашей  фигурки:', as: :file, required: false
       = pf.input :file_cache, as: :hidden
 
   #attention_comment
