--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -31,3 +31,7 @@ form.comment
     top: 10px
     bottom: 10px
   text-align: left
+
+.comment_name
+  font-family: Tahoma, Arial
+  font-size: 20px
