--- a/app/views/albums/_add_pictures_form.html.slim
+++ b/app/views/albums/_add_pictures_form.html.slim
@@ -3,5 +3,5 @@
   .form-inputs
     .form-images
       = render partial: 'shared/form_images'
-    = f.input_field :files, as: :file, multiple: true, data: {:'submit-to' => upload_pictures_topic_albums_path(parent, @album), method: :post}
+    = f.input :files,  label: 'Добавить изображение', as: :file, input_html: { multiple: true, data: {:'submit-to' => upload_pictures_topic_albums_path(parent, @album), method: :post}}
   = f.submit 'Сохранить' if @album.pictures.any? &:new_record?
