--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -5,9 +5,10 @@
   #comment_table
     = f.input :author, label: 'Имя гостя:'
     = f.input :comment, label: 'Комментарий:'
+    br
     = f.simple_fields_for :picture do |pf|
       = image_tag(pf.object, height: 100) if pf.object.file?
-      = pf.input :file, label: 'Фото вашей  фигурки:', as: :file, required: false
+      = pf.input :file, label: 'Добавить фото вашей  фигурки', as: :file, required: false
       = pf.input :file_cache, as: :hidden
 
   #attention_comment
