--- a/app/views/stories/_form.html.slim
+++ b/app/views/stories/_form.html.slim
@@ -24,8 +24,7 @@
   #buttons_story
     = f.simple_fields_for :pictures do |pf|
       = image_tag(pf.object, height: 400) if pf.object.file?
-      = pf.input_field :file, as: :file, required: false
+      = pf.input :file, label: 'Добавить изображение', as: :file, required: false
       = pf.hidden_field :file_cache
-      br
     .actions
       = f.submit 'Отправить'
