--- a/app/views/picture/uploader/_uploaded_pictures.html.slim
+++ b/app/views/picture/uploader/_uploaded_pictures.html.slim
@@ -1,3 +1,5 @@
+/receives locals: picturable
+
 = simple_fields_for picturable do |f|
   = f.simple_fields_for :pictures do |pf|
     - if pf.object.new_record?
