--- a/app/views/albums/_form.html.slim
+++ b/app/views/albums/_form.html.slim
@@ -5,7 +5,7 @@
   .form-inputs
     = f.input :title, label: 'Название'
 
-    = render partial: 'shared/pictures_uploader/show', locals: {picturable: @album}
+    = render partial: 'picture/uploader/show', locals: {picturable: @album}
 
   #album_attention
     |Дорогие посетители!
