--- a/app/views/picture/uploader/_uploaded_pictures.html.slim
+++ b/app/views/picture/uploader/_uploaded_pictures.html.slim
@@ -1,7 +1,7 @@
 /receives locals: picturable
 
 = simple_fields_for picturable do |f|
-  = f.simple_fields_for :pictures do |pf|
+  = f.simple_fields_for picturable.pictures_field_name do |pf|
     - if pf.object.new_record?
       li data = {removable: true}
         = image_tag(pf.object, height: 100) if pf.object.file?
