Do not shot picture uploader if pictures cannot be uploaded

--- a/app/views/picture/upload.js.erb
+++ b/app/views/picture/upload.js.erb
@@ -1,2 +1,2 @@
-picturesUploader.images_added(
+picturesUploader.imagesAdded(
         "<%= j(render partial: 'picture/uploader/uploaded_pictures', locals: {picturable: @picturable}) %>");
