--- a/app/views/picture/uploader/_show.html.slim
+++ b/app/views/picture/uploader/_show.html.slim
@@ -1,11 +1,14 @@
 /receives locals: picturable
 
 /TODO pictures count limit
-.pictures_uploader
-  ul.uploaded_pictures data-sortable=true
-    = render partial: 'picture/uploader/uploaded_pictures', locals: {picturable: picturable}
+- if picturable.picturable?
+  .pictures_uploader
+    ul.uploaded_pictures data-sortable=true
+      = render partial: 'picture/uploader/uploaded_pictures', locals: {picturable: picturable}
 
-  = simple_fields_for :picturable do |pf|
-    = pf.input :files,  label: 'Добавить изображение', as: :file,
-      input_html: {multiple: picturable.multiple_pictures?,
-        data: { url: picture_upload_path, :'form-data' => {picturable_type: picturable.class.name} }}
+    = simple_fields_for :picturable do |pf|
+      = pf.input :files,  label: 'Добавить изображение', as: :file,
+        input_html: {multiple: picturable.multiple_pictures?,
+          data: {url: picture_upload_path,
+                 :'form-data' => {picturable_type: picturable.class.name},
+                  max_pictures_count: picturable.max_pictures_count }}
