Pictures count limit

--- a/app/views/picture/upload.js.erb
+++ b/app/views/picture/upload.js.erb
@@ -1,2 +1,2 @@
-picturesUploader.imagesAdded(
+PicturesUploader.instance().imagesAdded(
         "<%= j(render partial: 'picture/uploader/uploaded_pictures', locals: {picturable: @picturable}) %>");
