--- a/app/views/devise/_logout.html.slim
+++ b/app/views/devise/_logout.html.slim
@@ -1,2 +1,2 @@
-- if admin_signed_in?
-  = link_to 'Выйти', destroy_admin_session_path, method: :delete
+- if user_signed_in?
+  = link_to 'Выйти', destroy_user_session_path, method: :delete
