добавили отступ слева для контента, добавили отступ для "добавления новых разделов и историй"

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -55,15 +55,16 @@ body
       border-bottom: solid 3px #2e8466
 
   #content
-    margin: 0 auto
+    margin:
+      top: 110px
+      left: 190px
     width: 1000px
     font-family: Times New Roman
     line-height: 1.6
     padding: 10px
     font-size: 150%
     text-align: center
-    margin-top: 110px
-    overflow: hidden
+
 
 
   #footer
