--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -66,7 +66,6 @@ body
     text-align: center
 
 
-
   #footer
     font-size: 55%
     font-family: Arial
@@ -84,8 +83,16 @@ body
     text-align: center
     padding-right: 10px
     padding-top: 5px
+    width: 100px
+    height: 30px
 
   #made_by
-    line-height: 1.4
     padding-left: 10px
     float: left
+
+  #date
+    display: inline-block
+
+
+  #date, #made_by
+    line-height: 1.4
