--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,3 +26,7 @@ html
       #copyright
         a.vk    href='http://vk.com/club119497'
           =image_tag('curu/vk.png', height: 30)
+          #date
+            |Мы Вконтакте
+            br
+            |2014
