--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,6 +8,7 @@
 body
   min-width: 1000px
   background: no-repeat image-url('curu/lines.png')
+  font-size: 25px
   a
     text-decoration: none
     color: black
@@ -24,7 +25,7 @@ body
   #menu
     a
       color: black
-      font-size: 170%
+      font-size: 33px
       font-family: Arial
       font-weight: bold
     display: inline-block
@@ -58,16 +59,14 @@ body
     margin:
       top: 110px
       left: 100px
-
     font-family: Times New Roman
     line-height: 1.6
     padding: 10px
-    font-size: 150%
     text-align: center
 
 
   #footer
-    font-size: 55%
+    font-size: 9px
     font-family: Arial
     font-weight: bold
     padding-top: 20px
