новая картинка на главной, изменен текст в уроках

--- a/app/views/lessons/index.html.slim
+++ b/app/views/lessons/index.html.slim
@@ -3,7 +3,7 @@
 #about_lessons
   |Здесь мы будем учиться населять журавликами наш мир.
   br
-  |Особая просьба в "названии" также указывать авторов схем.
+  |Дерзайте!
 
 div
   - @lessons.each do |lesson|
