--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -95,3 +95,15 @@ body
 
   #date, #made_by
     line-height: 1.4
+
+  #exit
+    a
+      font-size: 15px
+
+  #notice
+    font-size: 15px
+
+  #admin
+    position: absolute
+    top: 5px
+    right: 10px
