--- a/app/views/devise/_logout.html.slim
+++ b/app/views/devise/_logout.html.slim
@@ -1,2 +1,3 @@
 - if user_signed_in?
-  = link_to 'Выйти', destroy_user_session_path, method: :delete
+  #exit
+    = link_to 'Выйти', destroy_user_session_path, method: :delete
