фориат разделом, доп строки, формат изображений

--- a/app/assets/stylesheets/shared.css.sass
+++ b/app/assets/stylesheets/shared.css.sass
@@ -18,6 +18,7 @@ button.del
 label
   font-family: Tahoma, Arial
   font-size: 17px
+  float: left
 
 
 textarea, input[type=text]
@@ -111,3 +112,9 @@ span.error
   font-family: Tahoma, Arial
   font-size: 17px
   float: left
+
+span.speaker
+  font-style: italic
+
+.picture img
+  max-height: 400px
