--- a/app/views/lessons/show.html.slim
+++ b/app/views/lessons/show.html.slim
@@ -7,6 +7,6 @@
     = button_to 'Удалить', @lesson, data: { confirm: 'Удалить урок?'}, method: :delete
   .lesson-pictures
   - @lesson.pictures.each do |picture|
-    div.picture = image_tag picture.file, height: 400
+    div.picture = image_tag picture.file
 
 = render partial: 'comments/list'
