формат комментов и полей ввода

--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -11,6 +11,8 @@ form.comment
   textarea, input[type=text]
     float: left
 
+  input[type=text]
+    margin-left: 34px
 
 #comment_table
   margin-right: 10px
