--- a/app/assets/stylesheets/shared.css.sass
+++ b/app/assets/stylesheets/shared.css.sass
@@ -18,8 +18,12 @@ button.del
 label
   font-family: Tahoma, Arial
   font-size: 17px
-  float: left
 
+input#story_title
+  margin-left: 36px
+
+input#story_author
+  margin-left: 24px
 
 textarea, input[type=text]
   border: 1px solid
@@ -82,6 +86,9 @@ input[type=submit], label.file
 span.error
   color: darkred
   font-family: Tahoma, Arial
+
+.string, .required
+  float: left
 
 .field
   clear: both
