формат полей 1 - на тройку, но работает

--- a/app/assets/stylesheets/shared.css.sass
+++ b/app/assets/stylesheets/shared.css.sass
@@ -19,11 +19,6 @@ label
   font-family: Tahoma, Arial
   font-size: 17px
 
-input#story_title
-  margin-left: 36px
-
-input#story_author
-  margin-left: 24px
 
 textarea, input[type=text]
   border: 1px solid
@@ -87,9 +82,6 @@ span.error
   color: darkred
   font-family: Tahoma, Arial
 
-.string, .required
-  float: left
-
 .field
   clear: both
   text-align: right
@@ -119,6 +111,18 @@ span.error
   font-family: Tahoma, Arial
   font-size: 17px
   float: left
+  label
+    float: left
+
+#story_table
+  input#story_title, input#story_author
+    float: left
+
+input#story_title
+  margin-left: 36px
+
+input#story_author
+  margin-left: 24px
 
 span.speaker
   font-style: italic
