--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,9 +1,9 @@
 - if comment.persisted?
   .comment id="comment-#{comment.id}"
+  #comment_show
     - if can? :destroy, comment
       = button_to 'Удалить', comment, method: :delete, remote: true, data: { confirm: 'Удалить комментарий?' }
-    .comment_name
-      | #{l comment.created_at, format: :long} #{comment.author}
+    .comment_name #{l comment.created_at, format: :long} #{comment.author}
     .comment_content
       p = comment.comment
       - if comment.picture
