попыталась сделать в файле форма комментария структуру display-table, в css прописала соотв стили, не работат. Видимо, что-то не так добавила в твой код.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,6 +8,7 @@
 body
   min-width: 1000px
   background: no-repeat image-url('curu/lines.png')
+  background-color: white
   font-size: 25px
   a
     text-decoration: none
