--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -8,14 +8,15 @@ form.comment
     vertical-align: middle
     margin-left: 5px
 
-  textarea, input[type=text]
-    float: left
-
-  input[type=text]
-    margin-left: 34px
-
 #comment_table
+  display: table
   margin-right: 10px
+
+.comment_row
+  display: table-row
+
+label.comment_cell
+  display: table-cell
 
 #attention_comment
   margin:
