--- a/app/assets/stylesheets/stories.sass
+++ b/app/assets/stylesheets/stories.sass
@@ -1,5 +1,7 @@
-#story_table
-  margin-left: 35%
+.stories.new
+  .form_table
+    min-width: 300px
+    margin: 0 auto
 
 #long_story_text
   text-align: left
