--- a/app/views/albums/_form.html.slim
+++ b/app/views/albums/_form.html.slim
@@ -7,7 +7,7 @@
 
     = render partial: 'picture/uploader/show', locals: {picturable: @album}
 
-  #album_attention
+  .attention
     |Дорогие посетители!
     br
     |Изображения, содержащие мат, пошлость, рекламу или дубликат уже имеющихся фото, будут удалены!!!
