--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -1,7 +1,7 @@
 - @title = 'История'
 
-#about_history_story
+.about
   |Быль и небыль о бумажных журавликах. Факты, мифы, легенды...
 = render partial: 'list'
-#add_story
+.add
   = link_to 'Рассказать историю...', new_story_path, class: :add
