--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -17,7 +17,6 @@ body
       color: black
 
 
-
   #main_wrap
     min-height: 350px
     text-align: center
@@ -75,7 +74,7 @@ body
     box-sizing: border-box
     background: repeat-x image-url('curu/footer.png')
 
-  #copyright, #made_by
+  #copyright, #made_by, #date
     display: inline-block
 
   #copyright
@@ -89,9 +88,6 @@ body
   #made_by
     padding-left: 10px
     float: left
-
-  #date
-    display: inline-block
 
 
   #date, #made_by
