--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -1,43 +1,20 @@
 form.comment
   text-align: left
-  margin-top: 20px
-  font-family: Tahoma, Arial
-  font-size: 17px
 
-  textarea
-    vertical-align: middle
-    margin-left: 5px
-
-#comment_table
-  display: table
-  margin-right: 10px
-
-.comment_row
-  display: table-row
-
-label.comment_cell
-  display: table-cell
-
-#attention_comment
-  margin:
-    top: 5px
-    bottom: 10px
+.attention_comment
   font-size: 12px
-  color: darkred
-  clear: both
 
-#your_comment
-  font-family: Times New Roman
-  line-height: 1.6
-  font-size: 110%
-  margin:
-    top: 10px
-    bottom: 10px
-  text-align: left
+//#your_comment
+//  font-family: Times New Roman
+//  line-height: 1.6
+//  font-size: 110%
+//  margin:
+//    top: 10px
+//    bottom: 10px
 
 .comment_name
   font-family: Tahoma, Arial
   font-size: 20px
 
-#comment_show
+.comment_show
   text-align: left
