--- a/app/views/lessons/index.html.slim
+++ b/app/views/lessons/index.html.slim
@@ -1,6 +1,6 @@
 - @title = 'Уроки'
 
-#about_lessons
+.about
   |Здесь мы будем учиться населять журавликами наш мир.
   br
   |Дерзайте!
@@ -11,5 +11,6 @@ div
       p = lesson.title
       = image_tag lesson.pictures.first, height: 150
 
-#add_lesson
+.add
   = link_to 'Создать урок...', new_lesson_path
+
