--- a/app/views/stories/index_magic.slim
+++ b/app/views/stories/index_magic.slim
@@ -1,7 +1,7 @@
 - @title = 'Волшебство'
 
-#about_magic_story
+.about
   |Тут живут ваши истории, в которых журавлики принимали непосредственное участие, или, может быть, даже творили настоящие чудеса!..
 = render partial: 'list'
-#add_story
+.add
   = link_to 'Рассказать историю...', new_story_path(magic: true), class: :add
