--- a/app/views/topics/show.html.slim
+++ b/app/views/topics/show.html.slim
@@ -13,5 +13,5 @@ div
     = link_to album do
       p = album.title
       = image_tag album.pictures.first, height: 200
-#add_album
+.add
   = link_to 'Создать альбом...', new_topic_album_path(@topic), class: 'diff_new_album'
