--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -1,20 +1,10 @@
-form.comment
+form.comment, div.comment
   text-align: left
 
 .attention_comment
   font-size: 12px
 
-//#your_comment
-//  font-family: Times New Roman
-//  line-height: 1.6
-//  font-size: 110%
-//  margin:
-//    top: 10px
-//    bottom: 10px
-
 .comment_name
   font-family: Tahoma, Arial
   font-size: 20px
 
-.comment_show
-  text-align: left
