добавлены коробочки в уроки и альбомы

--- a/app/assets/stylesheets/shared.css.sass
+++ b/app/assets/stylesheets/shared.css.sass
@@ -119,3 +119,9 @@ span.speaker
 
 .picture img
   max-height: 400px
+
+.box
+  display: inline-block
+  margin-right: 30px
+  width: 250px
+  margin-bottom: 30px
