--- a/app/views/topics/show.html.slim
+++ b/app/views/topics/show.html.slim
@@ -10,8 +10,8 @@ br
 
 div
   - @topic.albums.each do |album|
-    = link_to album do
+    = link_to album, class: :box do
       p = album.title
-      = image_tag album.pictures.first, height: 200
+      = image_tag album.pictures.first, height: 150
 .add
   = link_to 'Создать альбом...', new_topic_album_path(@topic), class: 'diff_new_album'
