--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -60,6 +60,7 @@ body
       top: 110px
       left: 100px
     font-family: Times New Roman
+    font-size: 25px
     line-height: 1.6
     padding: 10px
     text-align: center
