--- a/app/assets/stylesheets/stories.sass
+++ b/app/assets/stylesheets/stories.sass
@@ -1,7 +1,6 @@
 .stories.new
   .form_table
-    min-width: 300px
-    margin: 0 auto
+    margin-left: 500px
 
 #long_story_text
   text-align: left
