--- a/app/assets/stylesheets/shared.css.sass
+++ b/app/assets/stylesheets/shared.css.sass
@@ -108,14 +108,16 @@ span.error
   font-size: 14px
 
 .add
-  margin-top: 20px
+  margin-top: 60px
   a
     font-family: Tahoma, Arial
+    font-size: 20px
     color: black
 
 
 span.speaker
-  font-style: italic
+  font-family: Tahoma, Arial
+  font-size: 20px
 
 .picture img
   max-height: 400px
@@ -126,3 +128,8 @@ span.speaker
   width: 250px
   margin-bottom: 30px
   vertical-align: top
+
+a.topic_link
+  color: #b50000
+  &:visited
+    color: #b50000
