отступ в % для историй

--- a/app/assets/stylesheets/stories.sass
+++ b/app/assets/stylesheets/stories.sass
@@ -1,6 +1,7 @@
-.stories.new
-  .form_table
-    margin-left: 500px
+body.stories
+  &.new, &.create
+    .form_table
+      margin-left: 35%
 
 #long_story_text
   text-align: left
