форматирование меню под список (ul)

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -23,14 +23,17 @@ body
 
 
   #menu
+    list-style-image: none
+    list-style-type: none
     a
       color: black
       font-size: 27px
       font-family: Arial
       font-weight: bold
-    display: inline-block
     margin:
       top: 25px
+    li
+      display: inline-block
 
   #home, #history, #lessons, #topic, #magic
     margin-right: 20px
